# debug-toolbar-repro

./: pyproject.toml
mysite/mysite/: settings.py
