[tool.poetry]
name = "debug-toolbar"
version = "0.1.0"
description = ""
authors = ["MarcoGlauser <github@mglauser.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-debug-toolbar = "^4.4.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
